--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <accomodations id="accomodations">
         <h1>Hébergements à Marseille</h1>
-        <container>
+        <section>
             <accomodation>
                 <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
                 <div>
@@ -164,7 +164,7 @@
                     </stars>
                 </div>
             </accomodation>
-        </container>
+        </section>
         <h1>Afficher plus</h1>
 
     </accomodations>
@@ -173,56 +173,58 @@
 
     <populars>
         <h1>Les plus populaires</h1>
-        <accomodation>
-            <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
-            <div>
-                <text>
-                    <h1>Hôtel Le soleil du matin</h1>
-                    <h2>Nuit à partir de 128€</h2>
-                </text>
-                <stars>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </stars>
-            </div>
-        </accomodation>
+        <section>
+            <accomodation>
+                <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
+                <div>
+                    <text>
+                        <h1>Hôtel Le soleil du matin</h1>
+                        <h2>Nuit à partir de 128€</h2>
+                    </text>
+                    <stars>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </stars>
+                </div>
+            </accomodation>
 
-        <accomodation>
-            <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
-            <div>
-                <text>
-                    <h1>Au coeur de l'eau Chambres d'hôtes</h1>
-                    <h2>Nuit à partir de 71€</h2>
-                </text>
-                <stars>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                </stars>
-            </div>
-        </accomodation>
+            <accomodation>
+                <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
+                <div>
+                    <text>
+                        <h1>Au coeur de l'eau Chambres d'hôtes</h1>
+                        <h2>Nuit à partir de 71€</h2>
+                    </text>
+                    <stars>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                    </stars>
+                </div>
+            </accomodation>
 
-        <accomodation>
-            <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
-            <div>
-                <text>
-                    <h1>Hôtel Tout bleu et Blanc</h1>
-                    <h2>Nuit à partir de 68€</h2>
-                </text>
-                <stars>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                </stars>
-            </div>
-        </accomodation>
+            <accomodation>
+                <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
+                <div>
+                    <text>
+                        <h1>Hôtel Tout bleu et Blanc</h1>
+                        <h2>Nuit à partir de 68€</h2>
+                    </text>
+                    <stars>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                    </stars>
+                </div>
+            </accomodation>
+        </section>
     </populars>
 
     <!-- ACTIVITIES -->
