--- a/index.html
+++ b/index.html
@@ -17,48 +17,48 @@
     </nav>
 </header>
 
-<entitled>
+<div class="entitled">
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
     <h2>En plein centre ville ou en pleine nature</h2>
-</entitled>
+</div>
 
-<search>
+<div class="search">
     <i class="fa-sharp fa-solid fa-location-dot"></i>
     <input type="text" placeholder="Marseille, France, ...">
     <button>Rechercher</button>
-</search>
+</div>
 
-<filters>
+<div class="filters">
     <h1>Filtres</h1>
-    <container>
+    <div>
         <logo>
             <i class="fa-sharp fa-solid fa-money-bill-wave"></i>
         </logo>
         <h2>Economique</h2>
-    </container>
+    </div>
 
-    <container>
+    <div>
         <logo>
             <i class="fas fa-child icone_cercle"></i>
         </logo>
         <h2>Familial</h2>
-    </container>
+    </div>
 
-    <container>
+    <div>
         <logo>
             <i class="fa-solid fa-heart"></i>
         </logo>
         <h2>Romantique</h2>
-    </container>
+    </div>
 
-    <container>
+    <div>
         <logo>
             <i class="fa-solid fa-dog"></i>
         </logo>
         <h2>Animaux autorisés</h2>
-    </container>
+    </div>
 
-</filters>
+</div>
 
 <informations>
     <container>
@@ -68,219 +68,219 @@
 </informations>
 
 
-<container>
+<main>
 
     <!-- ACCOMODATIONS -->
 
-    <accomodations id="accomodations">
+    <section class="accomodations" id="accomodations">
         <h1>Hébergements à Marseille</h1>
-        <section>
-            <accomodation>
+        <div class="accomodations_container">
+            <article>
                 <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
                 <div>
                     <h1>Auberge la Cannebière</h1>
                     <h2>Nuit à partir de 25€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/accomodations/photo2.jpg" alt="Hôtel du port"/>
                 <div>
                     <h1>Hôtel du port</h1>
                     <h2>Nuit à partir de 52€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/accomodations/photo3.jpg" alt="Hôtel Les mouettes"/>
                 <div>
                     <h1>Hôtel Les mouettes</h1>
                     <h2>Nuit à partir de 76€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/accomodations/photo4.jpg" alt="Hôtel de la mer"/>
                 <div>
                     <h1>Hôtel de la mer</h1>
                     <h2>Nuit à partir de 46€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/accomodations/photo5.jpg" alt="Auberge Le Panier"/>
                 <div>
                     <h1>Auberge Le Panier</h1>
                     <h2>Nuit à partir de 23€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/accomodations/photo6.jpg" alt="Hôtel chez Amina"/>
                 <div>
                     <h1>Hôtel chez Amina</h1>
                     <h2>Nuit à partir de 96€</h2>
-                    <stars>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
-        </section>
+            </article>
+        </div>
         <h1>Afficher plus</h1>
 
-    </accomodations>
+    </section>
 
     <!-- POPULARS -->
 
-    <populars>
+    <section class="populars">
         <h1>Les plus populaires</h1>
-        <section>
-            <accomodation>
+        <div class="populars_container">
+            <article>
                 <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
                 <div>
-                    <text>
+                    <div class="text">
                         <h1>Hôtel Le soleil du matin</h1>
                         <h2>Nuit à partir de 128€</h2>
-                    </text>
-                    <stars>
+                    </div>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
                 <div>
-                    <text>
+                    <div class="text">
                         <h1>Au coeur de l'eau Chambres d'hôtes</h1>
                         <h2>Nuit à partir de 71€</h2>
-                    </text>
-                    <stars>
+                    </div>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
+            </article>
 
-            <accomodation>
+            <article>
                 <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
                 <div>
-                    <text>
+                    <div class="text">
                         <h1>Hôtel Tout bleu et Blanc</h1>
                         <h2>Nuit à partir de 68€</h2>
-                    </text>
-                    <stars>
+                    </div>
+                    <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </stars>
+                    </div>
                 </div>
-            </accomodation>
-        </section>
-    </populars>
+            </article>
+        </div>
+    </section>
 
     <!-- ACTIVITIES -->
 
-    <activities id="activities">
+    <section class="activities" id="activities">
         <h1>Activités à Marseille</h1>
-        <container>
-            <activity class="large-activity">
+        <div class="activities_container">
+            <article class="large-activity">
                 <img src="assets/images/activities/photo10.jpg" alt="Vieux Port"/>
                 <h1>Vieux Port</h1>
-            </activity>
+            </article>
 
-            <activity class="medium-activity">
+            <article class="medium-activity">
                 <img src="assets/images/activities/photo11.jpg" alt="Fort de Pomègues"/>
                 <h1>Fort de Pomègues</h1>
-            </activity>
+            </article>
 
-            <activity class="small-activity">
+            <article class="small-activity">
                 <img src="assets/images/activities/photo12.jpg" alt="Îles du Frioul"/>
                 <h1>Îles du Frioul</h1>
-            </activity>
+            </article>
 
-            <activity class="large-activity">
+            <article class="large-activity">
                 <img src="assets/images/activities/photo13.jpg" alt="Parc National des Calanques"/>
                 <h1>Parc National des Calanques</h1>
-            </activity>
+            </article>
 
-            <activity class="medium-activity">
+            <article class="medium-activity">
                 <img src="assets/images/activities/photo14.jpg" alt="Notre-Dame-de-la-Garde"/>
                 <h1>Notre-Dame-de-la-Garde</h1>
-            </activity>
+            </article>
 
-            <activity class="small-activity">
+            <article class="small-activity">
                 <img src="assets/images/activities/photo15.jpg" alt="Parc Longchamp"/>
                 <h1>Parc Longchamp</h1>
-            </activity>
-        </container>
-    </activities>
-</container>
+            </article>
+        </div>
+    </section>
+</main>
 <footer>
-    <about>
+    <section>
         <h1><a href="#">A propos</a></h1>
         <h2><a href="#">Fonctionnement du site</a></h2>
         <h2><a href="#">Conditions générales de vente</a></h2>
         <h2><a href="#">Données et confidentialité</a></h2>
-    </about>
-    <accomodation>
+    </section>
+    <section>
         <h1><a href="#">Nos hébergements</a></h1>
         <h2><a href="#">Charte qualité</a></h2>
         <h2><a href="#">Soumettre votre hôtel</a></h2>
-    </accomodation>
-    <help>
-        <h1><a href="#">Assistance</h1>
-        <h2><a href="#">Centre d'aide</h2>
-        <h2><a href="#">Nous contacter</h2>
-    </help>
+    </section>
+    <section>
+        <h1><a href="#">Assistance</a></h1>
+        <h2><a href="#">Centre d'aide</a></h2>
+        <h2><a href="#">Nous contacter</a></h2>
+    </section>
 </footer>
 </body>
 </html>
