--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/05a5c38ff2.js" crossorigin="anonymous"></script>
@@ -12,8 +13,8 @@
 <header>
     <img src="assets/images/logo/Booki.png" alt="Booki logo"/>
     <nav>
-        <h1><a href="#accomodations">Hébergements</a></h1>
-        <h1><a href="#activities">Activités</a></h1>
+        <p><a href="#accomodations">Hébergements</a></p>
+        <p><a href="#activities">Activités</a></p>
     </nav>
 </header>
 
@@ -23,49 +24,52 @@
 </div>
 
 <div class="search">
-    <i class="fa-sharp fa-solid fa-location-dot"></i>
+    <i id="search_icon" class="fa-sharp fa-solid fa-location-dot"></i>
     <input type="text" placeholder="Marseille, France, ...">
-    <button>Rechercher</button>
+    <div>
+        <p>Rechercher</p>
+        <i class="fa-solid fa-star"></i>
+    </div>
 </div>
 
 <div class="filters">
     <h1>Filtres</h1>
-    <div>
-        <logo>
+    <div class="filter">
+        <div>
             <i class="fa-sharp fa-solid fa-money-bill-wave"></i>
-        </logo>
+        </div>
         <h2>Economique</h2>
     </div>
 
-    <div>
-        <logo>
+    <div class="filter">
+        <div>
             <i class="fas fa-child icone_cercle"></i>
-        </logo>
+        </div>
         <h2>Familial</h2>
     </div>
 
-    <div>
-        <logo>
+    <div class="filter">
+        <div>
             <i class="fa-solid fa-heart"></i>
-        </logo>
+        </div>
         <h2>Romantique</h2>
     </div>
 
-    <div>
-        <logo>
+    <div class="filter">
+        <div>
             <i class="fa-solid fa-dog"></i>
-        </logo>
+        </div>
         <h2>Animaux autorisés</h2>
     </div>
 
 </div>
 
-<informations>
-    <container>
+<div class="informations">
+    <div>
         <i class="fa-solid fa-info"></i>
-    </container>
+    </div>
     <h2>Plus de 500 logements sont disponibles dans cette ville</h2>
-</informations>
+</div>
 
 
 <main>
@@ -73,13 +77,13 @@
     <!-- ACCOMODATIONS -->
 
     <section class="accomodations" id="accomodations">
-        <h1>Hébergements à Marseille</h1>
+        <h2>Hébergements à Marseille</h2>
         <div class="accomodations_container">
             <article>
                 <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
                 <div>
-                    <h1>Auberge la Cannebière</h1>
-                    <h2>Nuit à partir de 25€</h2>
+                    <h2>Auberge la Cannebière</h2>
+                    <h3>Nuit à partir de 25€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -93,8 +97,8 @@
             <article>
                 <img src="assets/images/accomodations/photo2.jpg" alt="Hôtel du port"/>
                 <div>
-                    <h1>Hôtel du port</h1>
-                    <h2>Nuit à partir de 52€</h2>
+                    <h2>Hôtel du port</h2>
+                    <h3>Nuit à partir de 52€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -108,8 +112,8 @@
             <article>
                 <img src="assets/images/accomodations/photo3.jpg" alt="Hôtel Les mouettes"/>
                 <div>
-                    <h1>Hôtel Les mouettes</h1>
-                    <h2>Nuit à partir de 76€</h2>
+                    <h2>Hôtel Les mouettes</h2>
+                    <h3>Nuit à partir de 76€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -123,8 +127,8 @@
             <article>
                 <img src="assets/images/accomodations/photo4.jpg" alt="Hôtel de la mer"/>
                 <div>
-                    <h1>Hôtel de la mer</h1>
-                    <h2>Nuit à partir de 46€</h2>
+                    <h2>Hôtel de la mer</h2>
+                    <h3>Nuit à partir de 46€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -138,8 +142,8 @@
             <article>
                 <img src="assets/images/accomodations/photo5.jpg" alt="Auberge Le Panier"/>
                 <div>
-                    <h1>Auberge Le Panier</h1>
-                    <h2>Nuit à partir de 23€</h2>
+                    <h2>Auberge Le Panier</h2>
+                    <h3>Nuit à partir de 23€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -153,8 +157,8 @@
             <article>
                 <img src="assets/images/accomodations/photo6.jpg" alt="Hôtel chez Amina"/>
                 <div>
-                    <h1>Hôtel chez Amina</h1>
-                    <h2>Nuit à partir de 96€</h2>
+                    <h2>Hôtel chez Amina</h2>
+                    <h3>Nuit à partir de 96€</h3>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -165,21 +169,21 @@
                 </div>
             </article>
         </div>
-        <h1>Afficher plus</h1>
+        <h2 class="clickable">Afficher plus</h2>
 
     </section>
 
     <!-- POPULARS -->
 
     <section class="populars">
-        <h1>Les plus populaires</h1>
+        <h2>Les plus populaires</h2>
         <div class="populars_container">
             <article>
                 <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
                 <div>
                     <div class="text">
-                        <h1>Hôtel Le soleil du matin</h1>
-                        <h2>Nuit à partir de 128€</h2>
+                        <h2>Hôtel Le soleil du matin</h2>
+                        <h3>Nuit à partir de 128€</h3>
                     </div>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
@@ -195,8 +199,8 @@
                 <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
                 <div>
                     <div class="text">
-                        <h1>Au coeur de l'eau Chambres d'hôtes</h1>
-                        <h2>Nuit à partir de 71€</h2>
+                        <h2>Au coeur de l'eau Chambres d'hôtes</h2>
+                        <h3>Nuit à partir de 71€</h3>
                     </div>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
@@ -212,8 +216,8 @@
                 <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
                 <div>
                     <div class="text">
-                        <h1>Hôtel Tout bleu et Blanc</h1>
-                        <h2>Nuit à partir de 68€</h2>
+                        <h2>Hôtel Tout bleu et Blanc</h2>
+                        <h3>Nuit à partir de 68€</h3>
                     </div>
                     <div class="stars">
                         <i class="fa-solid fa-star"></i>
@@ -230,56 +234,56 @@
     <!-- ACTIVITIES -->
 
     <section class="activities" id="activities">
-        <h1>Activités à Marseille</h1>
+        <h2>Activités à Marseille</h2>
         <div class="activities_container">
             <article class="large-activity">
                 <img src="assets/images/activities/photo10.jpg" alt="Vieux Port"/>
-                <h1>Vieux Port</h1>
+                <h2>Vieux Port</h2>
             </article>
 
             <article class="medium-activity">
                 <img src="assets/images/activities/photo11.jpg" alt="Fort de Pomègues"/>
-                <h1>Fort de Pomègues</h1>
+                <h2>Fort de Pomègues</h2>
             </article>
 
             <article class="small-activity">
                 <img src="assets/images/activities/photo12.jpg" alt="Îles du Frioul"/>
-                <h1>Îles du Frioul</h1>
+                <h2>Îles du Frioul</h2>
             </article>
 
             <article class="large-activity">
                 <img src="assets/images/activities/photo13.jpg" alt="Parc National des Calanques"/>
-                <h1>Parc National des Calanques</h1>
+                <h2>Parc National des Calanques</h2>
             </article>
 
             <article class="medium-activity">
                 <img src="assets/images/activities/photo14.jpg" alt="Notre-Dame-de-la-Garde"/>
-                <h1>Notre-Dame-de-la-Garde</h1>
+                <h2>Notre-Dame-de-la-Garde</h2>
             </article>
 
             <article class="small-activity">
                 <img src="assets/images/activities/photo15.jpg" alt="Parc Longchamp"/>
-                <h1>Parc Longchamp</h1>
+                <h2>Parc Longchamp</h2>
             </article>
         </div>
     </section>
 </main>
 <footer>
     <section>
-        <h1><a href="#">A propos</a></h1>
-        <h2><a href="#">Fonctionnement du site</a></h2>
-        <h2><a href="#">Conditions générales de vente</a></h2>
-        <h2><a href="#">Données et confidentialité</a></h2>
+        <h2><a href="#">A propos</a></h2>
+        <h3><a href="#">Fonctionnement du site</a></h3>
+        <h3><a href="#">Conditions générales de vente</a></h3>
+        <h3><a href="#">Données et confidentialité</a></h3>
     </section>
     <section>
-        <h1><a href="#">Nos hébergements</a></h1>
-        <h2><a href="#">Charte qualité</a></h2>
-        <h2><a href="#">Soumettre votre hôtel</a></h2>
+        <h2><a href="#">Nos hébergements</a></h2>
+        <h3><a href="#">Charte qualité</a></h3>
+        <h3><a href="#">Soumettre votre hôtel</a></h3>
     </section>
     <section>
-        <h1><a href="#">Assistance</a></h1>
-        <h2><a href="#">Centre d'aide</a></h2>
-        <h2><a href="#">Nous contacter</a></h2>
+        <h2><a href="#">Assistance</a></h2>
+        <h3><a href="#">Centre d'aide</a></h3>
+        <h3><a href="#">Nous contacter</a></h3>
     </section>
 </footer>
 </body>
