suppression of redirection in the footer

--- a/index.html
+++ b/index.html
@@ -315,18 +315,18 @@
 </main>
 <footer>
     <section>
-        <h2><a href="#">A propos</a></h2>
+        <h2>A propos</h2>
         <h3><a href="#">Fonctionnement du site</a></h3>
         <h3><a href="#">Conditions générales de vente</a></h3>
         <h3><a href="#">Données et confidentialité</a></h3>
     </section>
     <section>
-        <h2><a href="#">Nos hébergements</a></h2>
+        <h2>Nos hébergements</h2>
         <h3><a href="#">Charte qualité</a></h3>
         <h3><a href="#">Soumettre votre hôtel</a></h3>
     </section>
     <section>
-        <h2><a href="#">Assistance</a></h2>
+        <h2>Assistance</h2>
         <h3><a href="#">Centre d'aide</a></h3>
         <h3><a href="#">Nous contacter</a></h3>
     </section>
