Fix size bug with the icon of the form and information div

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </article>
             </a>
         </div>
-        <h2 class="clickable">Afficher plus</h2>
+        <h2 class="clickable"><a href="#">Afficher plus</a></h2>
 
     </section>
 
