--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <header>
     <img src="assets/images/logo/Booki.png" alt="Booki logo"/>
     <nav>
-        <p><a href="#accomodations">Hébergements</a></p>
-        <p><a href="#activities">Activités</a></p>
+        <a href="#accomodations">Hébergements</a>
+        <a href="#activities">Activités</a>
     </nav>
 </header>
 
@@ -26,10 +26,10 @@
 <form class="search">
     <i id="search_icon" class="fa-sharp fa-solid fa-location-dot"></i>
     <input type="text" placeholder="Marseille, France, ...">
-    <div>
-        <p>Rechercher</p>
+    <button>
+        <span>Rechercher</span>
         <i class="fa-solid fa-magnifying-glass"></i>
-    </div>
+    </button>
 </form>
 
 <div class="filters">
@@ -79,8 +79,8 @@
     <section class="accomodations" id="accomodations">
         <h2>Hébergements à Marseille</h2>
         <div class="accomodations_container">
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
                     <div>
                         <div class="title">
@@ -95,11 +95,11 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo2.jpg" alt="Hôtel du port"/>
                     <div>
                         <div class="title">
@@ -114,11 +114,11 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo3.jpg" alt="Hôtel Les mouettes"/>
                     <div>
                         <div class="title">
@@ -133,11 +133,11 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo4.jpg" alt="Hôtel de la mer"/>
                     <div>
                         <div class="title">
@@ -152,11 +152,11 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo5.jpg" alt="Auberge Le Panier"/>
                     <div>
                         <div class="title">
@@ -171,11 +171,11 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/accomodations/photo6.jpg" alt="Hôtel chez Amina"/>
                     <div>
                         <div class="title">
@@ -190,10 +190,10 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
         </div>
-        <h2 class="clickable"><a href="#">Afficher plus</a></h2>
+        <a href="#" class="clickable">Afficher plus</a>
 
     </section>
 
@@ -205,8 +205,8 @@
             <i class="fa-solid fa-star"></i>
         </div>
         <div class="populars_container">
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
                     <div>
                         <div class="title">
@@ -221,11 +221,11 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
                     <div>
                         <div class="title">
@@ -240,11 +240,11 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article>
+            <article>
+                <a href="#">
                     <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
                     <div>
                         <div class="title">
@@ -259,8 +259,8 @@
                             <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
                         </div>
                     </div>
-                </article>
-            </a>
+                </a>
+            </article>
         </div>
     </section>
 
@@ -269,66 +269,66 @@
     <section class="activities" id="activities">
         <h2>Activités à Marseille</h2>
         <div class="activities_container">
-            <a href="#">
-                <article class="large-activity">
+            <article class="large-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo10.jpg" alt="Vieux Port"/>
                     <h2>Vieux Port</h2>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article class="medium-activity">
+            <article class="medium-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo11.jpg" alt="Fort de Pomègues"/>
                     <h2>Fort de Pomègues</h2>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article class="small-activity">
+            <article class="small-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo12.jpg" alt="Îles du Frioul"/>
                     <h2>Îles du Frioul</h2>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article class="large-activity">
+            <article class="large-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo13.jpg" alt="Parc National des Calanques"/>
                     <h2>Parc National des Calanques</h2>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article class="medium-activity">
+            <article class="medium-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo14.jpg" alt="Notre-Dame-de-la-Garde"/>
                     <h2>Notre-Dame-de-la-Garde</h2>
-                </article>
-            </a>
+                </a>
+            </article>
 
-            <a href="#">
-                <article class="small-activity">
+            <article class="small-activity">
+                <a href="#">
                     <img src="assets/images/activities/photo15.jpg" alt="Parc Longchamp"/>
                     <h2>Parc Longchamp</h2>
-                </article>
-            </a>
+                </a>
+            </article>
         </div>
     </section>
 </main>
 <footer>
     <section>
         <h2>A propos</h2>
-        <h3><a href="#">Fonctionnement du site</a></h3>
-        <h3><a href="#">Conditions générales de vente</a></h3>
-        <h3><a href="#">Données et confidentialité</a></h3>
+        <a href="#">Fonctionnement du site</a>
+        <a href="#">Conditions générales de vente</a>
+        <a href="#">Données et confidentialité</a>
     </section>
     <section>
         <h2>Nos hébergements</h2>
-        <h3><a href="#">Charte qualité</a></h3>
-        <h3><a href="#">Soumettre votre hôtel</a></h3>
+        <a href="#">Charte qualité</a>
+        <a href="#">Soumettre votre hôtel</a>
     </section>
     <section>
         <h2>Assistance</h2>
-        <h3><a href="#">Centre d'aide</a></h3>
-        <h3><a href="#">Nous contacter</a></h3>
+        <a href="#">Centre d'aide</a>
+        <a href="#">Nous contacter</a>
     </section>
 </footer>
 </body>
