Delete css in html file

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
@@ -130,7 +130,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
@@ -148,8 +148,8 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
@@ -168,7 +168,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
@@ -237,7 +237,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
@@ -256,7 +256,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star grey"></i> <!-- -->
                         </div>
                     </div>
                 </a>
